--- a/include_footer.html
+++ b/include_footer.html
@@ -1,5 +1,5 @@
 
-        <footer class="main-footer">
+        <footer class="main-footer text-sm">
             <div class="float-right d-none d-sm-block">
                 <b>Version</b> 3.0.5
             </div>
