--- a/include_navbar.html
+++ b/include_navbar.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <!-- Navbar -->
-<nav class="main-header navbar navbar-expand navbar-dark navbar-primary">
+<nav class="main-header navbar navbar-expand navbar-light navbar-white">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item dropdown">
