--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -1,8 +1,8 @@
 <aside class="main-sidebar elevation-4 sidebar-light-primary">
   <!-- Brand Logo -->
   <a href="index3.html" class="brand-link">
-    <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-    <span class="brand-text font-weight-light">Maxwell</span>
+    <img src="./auth/assets/images/bookshelf.png" alt="Maxwell Library" style="height: 2rem; margin-left: .7rem;">
+    <span class="brand-text font-weight-light">Maxwell Library</span>
   </a>
 
   <!-- Sidebar -->
@@ -10,10 +10,10 @@
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="image">
-        <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+        <img src="assets/profile.png" class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
-        <a href="#" class="d-block">Alexander Pierce</a>
+        <a href="#" class="d-block">Niki Zefanya</a>
       </div>
     </div>
 
