--- a/detail.html
+++ b/detail.html
@@ -37,7 +37,7 @@
       <section class="content-header">
         <div class="container-fluid">
           <div class="button">
-            <a class="float" href="index.php" role="button"><i class="fas fa-arrow-left"></i></a>
+            <a class="float" href="index.html" role="button"><i class="fas fa-arrow-left"></i></a>
             <ul class="menuhead">
               <li><a href="#" data-toggle="modal" data-target="#EditModal">Edit</a></li>
               <li><a href="#" data-toggle="modal" data-target="#deleteModal">Delete</a></li>
@@ -174,6 +174,8 @@
         </div>
       </div>
       <!-- /.modal -->
+
+
       <!-- Main content -->
       <section class="content">
         <div class="category">
