--- a/auth/index.html
+++ b/auth/index.html
@@ -152,48 +152,9 @@
   <script src="../plugins/jquery-validation/additional-methods.min.js"></script>
 
   <script src="assets/js/script.js"></script>
-  
+  <script src="assets/js/loginvalidation.js"></script>
 
-  <script type="text/javascript">
-    $(document).ready(function () {
-      $.validator.setDefaults({
-        submitHandler: function () {
-          window.location.href = "../index.html";
-        }
-      });
-      $('#loginForm').validate({
-        rules: {
-          email: {
-            required: true,
-            email: true,
-          },
-          password: {
-            required: true,
-          },
-        },
-        messages: {
-          email: {
-            required: "Please enter a email address",
-            email: "Please enter a valid email address"
-          },
-          password: {
-            required: "Please provide a password",
-          },
-        },
-        errorElement: 'span',
-        errorPlacement: function (error, element) {
-          error.addClass('invalid-feedback');
-          element.closest('.form-group').append(error);
-        },
-        highlight: function (element, errorClass, validClass) {
-          $(element).addClass('is-invalid');
-        },
-        unhighlight: function (element, errorClass, validClass) {
-          $(element).removeClass('is-invalid');
-        }
-      });
-    });
-  </script>
+
 
   <script type="text/javascript">
     $(document).ready(function () {
