--- a/auth/index.html
+++ b/auth/index.html
@@ -151,6 +151,7 @@
   <script src="../plugins/jquery-validation/jquery.validate.min.js"></script>
   <script src="../plugins/jquery-validation/additional-methods.min.js"></script>
 
+  <!--custom javascript-->
   <script src="assets/js/script.js"></script>
   <script src="assets/js/loginvalidation.js"></script>
   <script src="assets/js/registervalidation.js"></script>
