--- a/include_navbar.html
+++ b/include_navbar.html
@@ -82,7 +82,7 @@
     <!-- SEARCH FORM -->
     <form  id="search-books"  class="form-inline ml-3">
         <div id="searchbar" class="input-group input-group-sm">
-            <input id="search" class="form-control form-control-navbar searchbar" value="test" type="text" placeholder="Search" aria-label="Search">
+            <input id="search" class="form-control form-control-navbar searchbar" value="" type="text" placeholder="Search" aria-label="Search">
             <div class="input-group-append">
                 <button class="btn btn-navbar" type="submit">
                     <i class="fas fa-search"></i>
@@ -90,7 +90,11 @@
             </div>
         </div>
     </form>
-    <a id="toggle" class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        </li>
+    </ul>
 </nav>
 <!-- /.navbar -->
 
