--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="wrapper">
 
         <link rel="stylesheet" type="text/css" href="style.css">
-        <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-dark navbar-primary">
+            <!-- Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-light navbar-white">
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
@@ -115,7 +115,7 @@
             <!-- SEARCH FORM -->
             <form  id="search-books"  class="form-inline ml-3">
                 <div id="searchbar" class="input-group input-group-sm">
-                    <input id="search" class="form-control form-control-navbar searchbar" type="text" placeholder="Search" aria-label="Search">
+                    <input id="search" class="form-control form-control-navbar searchbar" value="" type="text" placeholder="Search" aria-label="Search">
                     <div class="input-group-append">
                         <button class="btn btn-navbar" type="submit">
                             <i class="fas fa-search"></i>
@@ -123,7 +123,11 @@
                     </div>
                 </div>
             </form>
-            <a id="toggle" class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                </li>
+            </ul>
         </nav>
         <!-- /.navbar -->
         <div w3-include-html="include_sidebar.html"></div>
@@ -335,8 +339,8 @@
     <script src="js.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="./plugins/slick/slick.js" type="text/javascript" charset="utf-8"></script>
-  
-  
+
+
     <!-- Flickity -->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script>
