--- a/detail.html
+++ b/detail.html
@@ -37,7 +37,7 @@
       <section class="content-header">
         <div class="container-fluid">
           <div class="button">
-            <a class="float" href="index.php" role="button"><i class="fas fa-arrow-left"></i></a>
+            <a class="float" href="index.html" role="button"><i class="fas fa-arrow-left"></i></a>
             <ul class="menuhead">
               <li><a href="#" data-toggle="modal" data-target="#EditModal">Edit</a></li>
               <li><a href="#" data-toggle="modal" data-target="#deleteModal">Delete</a></li>
@@ -48,132 +48,9 @@
               <img class="big-preview" width="1600px" height="1200px">
             </div>
           </div>
-
-
         </div><!-- /.container-fluid -->
       </section>
-      <!-- /.modal -->
-      <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Do you want to delete?</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">If you delete this, you can't be returned</div>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-              <a class="btn btn-danger" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
-                data-target="#BerhasilModal">Delete</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal fade" id="BerhasilModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Delete Complete!</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body"><img class="check" src="./assets/check.png"></div>
-            <p>Data has been deleted</p>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal fade" id="BerhasilModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Save Complete!</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body"><img class="check" src="./assets/check.png"></div>
-            <p>Data already saved</p>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Edit Data</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="row">
-                <div class="col-sm-2">
-                  <p>Url Image</p>
-                </div>
-                <div class="col-sm-10">
-                  <input type="text" id="url" name="url" class="form-control" placeholder="/assets/background.png">
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-sm-2">
-                  <p>Book Tittle</p>
-                </div>
-                <div class="col-sm-10">
-                  <input type="text" id="title" name="title" class="form-control" placeholder="Gunung">
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-sm-2">
-                  <p>Date</p>
-                </div>
-                <div class="col-sm-10">
-                  <input type="text" id="date" name="date" class="form-control" readonly placeholder="10 November 2020">
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-sm-2">
-                  <p>Category</p>
-                </div>
-                <div class="col-sm-10">
-                  <input type="text" id="category" name="category" class="form-control" readonly placeholder="Novel">
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-sm-2">
-                  <div class="text">Description</div>
-                </div>
-                <div class="col-sm-10">
-                  <textarea name="txtcomment" id="txtcomment" cols="50" rows="5"
-                    placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac diam eget est rutrum ultrices. Donec laoreet enim a massa dapibus, cursus egestas dui pulvinar. Proin sit amet accumsan lectus. Nullam auctor auctor consequat. Donec semper magna erat, sed fringilla lacus pretium eget. Cras porttitor, nibh sit amet interdum bibendum, nibh velit accumsan tellus, vel vehicula tellus leo vitae ipsum. Praesent sit amet libero sed orci ullamcorper efficitur. Pellentesque in euismod purus, sit amet ultrices tortor. Vestibulum ante dui, tempor at dui id, tincidunt euismod diam. Integer pellentesque massa nibh, ac eleifend odio malesuada sed. Phasellus orci sem, cursus nec orci ut, accumsan facilisis lacus. Nullam at elementum nibh, ac gravida felis. In sagittis rhoncus nisi tempus dignissim. Sed fringilla consequat ante vitae lobortis. Cras posuere ligula vel enim suscipit malesuada. Vivamus non nulla ut ante imperdiet euismod quis nec massa."></textarea>
-                </div>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-              <a class="btn btn-warning" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
-                data-target="#BerhasilModal2">Save</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.modal -->
+      
       <!-- Main content -->
       <section class="content">
         <div class="category">
@@ -218,8 +95,8 @@
           <h4>Recomended</h4>
         </div>
         <div class="row" id="recomended">
-          <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
+          <div class="col-xs-4 col-sm-4 col-lg-4">
+            <div class="card" id="recomendedcard" >
               <img src="./assets/novel-dilan.jpg" class="card-img-top" alt="Dilan 1991">
               <div class="card-body">
                 <h5 class="card-title">Dilan 1991</h5>
@@ -230,8 +107,8 @@
             </div>
           </div>
 
-          <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
+          <div class="col-xs-4 col-sm-4 col-lg-4">
+            <div class="card" id="recomendedcard" >
               <img src="./assets/buku-seni-minimalis.jpg" class="card-img-top" alt="Dilan 1991">
               <div class="card-body">
                 <h5 class="card-title">Seni Hidup Minimalis</h5>
@@ -242,8 +119,8 @@
             </div>
           </div>
 
-          <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
+          <div class="col-xs-4 col-sm-4 col-lg-4">
+            <div class="card" id="recomendedcard" >
               <img src="./assets/novel-milea.jpg" class="card-img-top" alt="Milea">
               <div class="card-body">
                 <h5 class="card-title">Milea</h5>
@@ -258,6 +135,130 @@
       <!-- /.content -->
     </div>
   </div>
+
+  <!-- /.modal -->
+  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Do you want to delete?</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">If you delete this, you can't be returned</div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+        <a class="btn btn-danger" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
+          data-target="#BerhasilModal">Delete</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="BerhasilModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Complete!</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body"><img class="check" src="./assets/check.png"></div>
+      <p>Data has been deleted</p>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="BerhasilModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Save Complete!</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body"><img class="check" src="./assets/check.png"></div>
+      <p>Data already saved</p>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Edit Data</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-sm-2">
+            <p>Url Image</p>
+          </div>
+          <div class="col-sm-10">
+            <input type="text" id="url" name="url" class="form-control" placeholder="/assets/background.png">
+          </div>
+        </div>
+        <hr class="divider">
+        <div class="row">
+          <div class="col-sm-2">
+            <p>Book Tittle</p>
+          </div>
+          <div class="col-sm-10">
+            <input type="text" id="title" name="title" class="form-control" placeholder="Gunung">
+          </div>
+        </div>
+        <hr class="divider">
+        <div class="row">
+          <div class="col-sm-2">
+            <p>Date</p>
+          </div>
+          <div class="col-sm-10">
+            <input type="text" id="date" name="date" class="form-control" readonly placeholder="10 November 2020">
+          </div>
+        </div>
+        <hr class="divider">
+        <div class="row">
+          <div class="col-sm-2">
+            <p>Category</p>
+          </div>
+          <div class="col-sm-10">
+            <input type="text" id="category" name="category" class="form-control" readonly placeholder="Novel">
+          </div>
+        </div>
+        <hr class="divider">
+        <div class="row">
+          <div class="col-sm-2">
+            <div class="text">Description</div>
+          </div>
+          <div class="col-sm-10">
+            <textarea name="txtcomment" id="txtcomment" cols="50" rows="5"
+              placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac diam eget est rutrum ultrices. Donec laoreet enim a massa dapibus, cursus egestas dui pulvinar. Proin sit amet accumsan lectus. Nullam auctor auctor consequat. Donec semper magna erat, sed fringilla lacus pretium eget. Cras porttitor, nibh sit amet interdum bibendum, nibh velit accumsan tellus, vel vehicula tellus leo vitae ipsum. Praesent sit amet libero sed orci ullamcorper efficitur. Pellentesque in euismod purus, sit amet ultrices tortor. Vestibulum ante dui, tempor at dui id, tincidunt euismod diam. Integer pellentesque massa nibh, ac eleifend odio malesuada sed. Phasellus orci sem, cursus nec orci ut, accumsan facilisis lacus. Nullam at elementum nibh, ac gravida felis. In sagittis rhoncus nisi tempus dignissim. Sed fringilla consequat ante vitae lobortis. Cras posuere ligula vel enim suscipit malesuada. Vivamus non nulla ut ante imperdiet euismod quis nec massa."></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+        <a class="btn btn-warning" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
+          data-target="#BerhasilModal2">Save</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /.modal -->
+
   <!-- ./wrapper -->
   <!-- jQuery -->
   <script src="./plugins/jquery/jquery.min.js"></script>
