--- a/detail.html
+++ b/detail.html
@@ -22,115 +22,53 @@
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-     <!-- Ckeditor -->
-     <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
 </head>
 
 
 <body class="hold-transition sidebar-mini layout-fixed">
   <!-- Site wrapper -->
   <div class="wrapper">
-
+       <!-- Navbar -->
+       <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
+        <!-- Left navbar links -->
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                    class="nav-link dropdown-toggle">All Categories</a>
+                <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
+                    style="left: 0px; right: inherit;">
+                    <li><a href="#" class="dropdown-item">Novel</a></li>
+                    <li><a href="#" class="dropdown-item">Comic Book</a></li>
+                    <li><a href="#" class="dropdown-item">Detective and Mystery</a></li>
+                    <li><a href="#" class="dropdown-item">Historical Fiction</a></li>
+                    <li><a href="#" class="dropdown-item">Horror</a></li>
+                    <li><a href="#" class="dropdown-item">literary Fiction</a></li>
+                    <!-- End Level two -->
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+                <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                    class="nav-link dropdown-toggle">All Time</a>
+                <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
+                    style="left: 0px; right: inherit;">
+                    <li><a href="#" class="dropdown-item">2020</a></li>
+                    <li><a href="#" class="dropdown-item">2019</a></li>
+                    <li><a href="#" class="dropdown-item">2018</a></li>
+                    <li><a href="#" class="dropdown-item">2017</a></li>
+                    <li><a href="#" class="dropdown-item">2016</a></li>
+                    <li><a href="#" class="dropdown-item">2015</a></li>
+                    <!-- End Level two -->
+                </ul>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+            </li>
+        </ul>
+      </nav>
+      <!-- /.navbar -->
     <div w3-include-html="include_sidebar.html"></div>
-
-        <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-light navbar-white">
-      <!-- Left navbar links -->
-      <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-              <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                  class="nav-link dropdown-toggle">All Categories</a>
-              <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-                  style="left: 0px; right: inherit;">
-                  <li><a href="#" class="dropdown-item">Some action </a></li>
-                  <li><a href="#" class="dropdown-item">Some other action</a></li>
-
-                  <li class="dropdown-divider"></li>
-
-                  <!-- Level two dropdown-->
-                  <li class="dropdown-submenu dropdown-hover">
-                      <a id="dropdownSubMenu2" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                          aria-expanded="false" class="dropdown-item dropdown-toggle">Hover for action</a>
-                      <ul aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
-                          <li>
-                              <a tabindex="-1" href="#" class="dropdown-item">level 2</a>
-                          </li>
-
-                          <!-- Level three dropdown-->
-                          <li class="dropdown-submenu">
-                              <a id="dropdownSubMenu3" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                  aria-expanded="false" class="dropdown-item dropdown-toggle">level 2</a>
-                              <ul aria-labelledby="dropdownSubMenu3" class="dropdown-menu border-0 shadow">
-                                  <li><a href="#" class="dropdown-item">3rd level</a></li>
-                                  <li><a href="#" class="dropdown-item">3rd level</a></li>
-                              </ul>
-                          </li>
-                          <!-- End Level three -->
-
-                          <li><a href="#" class="dropdown-item">level 2</a></li>
-                          <li><a href="#" class="dropdown-item">level 2</a></li>
-                      </ul>
-                  </li>
-                  <!-- End Level two -->
-              </ul>
-          </li>
-
-          <li class="nav-item dropdown">
-              <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                  class="nav-link dropdown-toggle">All Time</a>
-              <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-                  style="left: 0px; right: inherit;">
-                  <li><a href="#" class="dropdown-item">Some action </a></li>
-                  <li><a href="#" class="dropdown-item">Some other action</a></li>
-
-                  <li class="dropdown-divider"></li>
-
-                  <!-- Level two dropdown-->
-                  <li class="dropdown-submenu dropdown-hover">
-                      <a id="dropdownSubMenu2" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                          aria-expanded="false" class="dropdown-item dropdown-toggle">Hover for action</a>
-                      <ul aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
-                          <li>
-                              <a tabindex="-1" href="#" class="dropdown-item">level 2</a>
-                          </li>
-
-                          <!-- Level three dropdown-->
-                          <li class="dropdown-submenu">
-                              <a id="dropdownSubMenu3" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                  aria-expanded="false" class="dropdown-item dropdown-toggle">level 2</a>
-                              <ul aria-labelledby="dropdownSubMenu3" class="dropdown-menu border-0 shadow">
-                                  <li><a href="#" class="dropdown-item">3rd level</a></li>
-                                  <li><a href="#" class="dropdown-item">3rd level</a></li>
-                              </ul>
-                          </li>
-                          <!-- End Level three -->
-
-                          <li><a href="#" class="dropdown-item">level 2</a></li>
-                          <li><a href="#" class="dropdown-item">level 2</a></li>
-                      </ul>
-                  </li>
-                  <!-- End Level two -->
-              </ul>
-          </li>
-      </ul>
-      <!-- SEARCH FORM -->
-      <form  id="search-books"  class="form-inline ml-3">
-          <div id="searchbar" class="input-group input-group-sm">
-              <input id="search" class="form-control form-control-navbar searchbar" value="" type="text" placeholder="Search" aria-label="Search">
-              <div class="input-group-append">
-                  <button class="btn btn-navbar" type="submit">
-                      <i class="fas fa-search"></i>
-                  </button>
-              </div>
-          </div>
-      </form>
-      <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-              <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-          </li>
-      </ul>
-    </nav>
-    <!-- /.navbar -->
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
@@ -149,8 +87,6 @@
               <img class="big-preview" width="1600px" height="1200px">
             </div>
           </div>
-
-
         </div><!-- /.container-fluid -->
       </section>
       <!-- /.modal -->
@@ -375,6 +311,8 @@
   <!-- AdminLTE for demo purposes -->
   <script src="../../dist/js/demo.js"></script>
   <script src="js.js" type="text/javascript"></script>
+  <!-- Ckeditor -->
+  <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
 
 </body>
 
