--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -1,6 +1,6 @@
 <aside class="main-sidebar elevation-4 sidebar-light-primary">
   <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
+  <a href="index.html" class="brand-link">
     <img src="./auth/assets/images/bookshelf.png" alt="Maxwell Library" style="height: 2rem; margin-left: .7rem;">
     <span class="brand-text font-weight-light">Maxwell Library</span>
   </a>
@@ -23,7 +23,7 @@
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
         <li class="nav-item">
-          <a href="index.php" class="nav-link active">
+          <a href="index.html" class="nav-link active">
             <i class="nav-icon fas fa-book"></i>
             <p>
               Explore
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="detail.php" class="nav-link">
+          <a href="history.html" class="nav-link">
             <i class="nav-icon fas fa-history"></i>
             <p>
               History
