--- a/detail.html
+++ b/detail.html
@@ -21,10 +21,6 @@
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-
-     <!-- Ckeditor -->
-     <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
-    
 </head>
 
 
@@ -166,7 +162,7 @@
                 <hr class="divider">
                 <div class="col-sm-10">
                 <!-- <textarea name="txtcomment" id="txtcomment" cols="50" rows="5" placeholder="Type Here"></textarea> -->
-                <textarea name="txtcomment" id="txtcomment" cols="50" rows="5" placeholder="Type Here"></textarea>
+                <textarea name="txtcomment" id="txtcomment" cols="80" rows="5" placeholder="Type Here"></textarea>
                 <script>
                         CKEDITOR.replace( 'txtcomment' );
                 </script>  
@@ -221,47 +217,50 @@
         </div>
       </section>
       <section>
-        <!--Adding list books-->
-        <div class="list-title">
-          <h4>Recomended</h4>
+        <div class="container-fluid">
+            <!--Adding list books-->
+            <div class="list-title">
+              <h4>Recomended</h4>
+            </div>
+            <div class="row" id="recomended">
+              <div class="col-sm-4">
+                <div class="card" id="recomendedcard" style="width: 18rem;">
+                  <img src="./assets/novel-dilan.jpg" class="card-img-top" alt="Dilan 1991">
+                  <div class="card-body">
+                    <h5 class="recommend-title">Dilan 1991</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
+                        ullam officia ... </p>
+                    <a class="recomendedcard1 btn btn-primary" href="#" class="btn btn-primary">Read More</a>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-sm-4">
+                <div class="card" id="recomendedcard" style="width: 18rem;">
+                  <img src="./assets/buku-seni-minimalis.jpg" class="card-img-top" alt="Dilan 1991">
+                  <div class="card-body">
+                    <h5 class="recommend-title">Seni Hidup Minimalis</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
+                      ullam officia ... </p>
+                    <a class="recomendedcard1 btn btn-primary" href="#" class="btn btn-primary">Read More</a>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-sm-4">
+                <div class="card" id="recomendedcard" style="width: 18rem;">
+                  <img src="./assets/novel-milea.jpg" class="card-img-top" alt="Milea">
+                  <div class="card-body">
+                    <h5 class="recommend-title">Milea</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
+                      ullam officia ... </p>
+                    <a class="recomendedcard1 btn btn-primary" href="#">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
         </div>
-        <div class="row" id="recomended">
-          <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="./assets/novel-dilan.jpg" class="card-img-top" alt="Dilan 1991">
-              <div class="card-body">
-                <h5 class="recommend-title">Dilan 1991</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
-                  ullam officia ... </p>
-                <a class="recomendedcard1 btn btn-primary" href="#" class="btn btn-primary">Read More</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="./assets/buku-seni-minimalis.jpg" class="card-img-top" alt="Dilan 1991">
-              <div class="card-body">
-                <h5 class="recommend-title">Seni Hidup Minimalis</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
-                  ullam officia ... </p>
-                <a class="recomendedcard1 btn btn-primary" href="#" class="btn btn-primary">Read More</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="./assets/novel-milea.jpg" class="card-img-top" alt="Milea">
-              <div class="card-body">
-                <h5 class="recommend-title">Milea</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
-                  ullam officia ... </p>
-                <a class="recomendedcard1 btn btn-primary" href="#">Read More</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </section>
       <!-- /.content -->
     </div>
@@ -278,6 +277,8 @@
   <!-- AdminLTE for demo purposes -->
   <script src="../../dist/js/demo.js"></script>
   <script src="js.js" type="text/javascript"></script>
+  <!-- Ckeditor -->
+  <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
 
 </body>
 
