delete include_navbar, separate js for search

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <form  id="search-books"  class="form-inline flex-grow-1 ">
                 <div id="searchbar" class="form-group has-search">
                     <span class="fa fa-search form-control-feedback"></span>
-                    <input id="input-search" type="text" class="form-control" placeholder="Search">
+                    <input id="input-search" type="text" class="form-control" placeholder="Search Book">
                   </div>
             </form>
             <ul class="navbar-nav">
@@ -286,7 +286,7 @@
 
     <!-- Flickity -->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-
+    <script type="text/javascript" src="search.js" ></script>
 </body>
 
 </html>
