Modified sidebar for history

--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -34,34 +34,59 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
               <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
-        <li class="nav-item">
-          <a href="index.html" class="nav-link active">
-            <i class="nav-icon fas fa-book"></i>
-            <p>
-              Explore
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="history.html" class="nav-link">
-            <i class="nav-icon fas fa-history"></i>
-            <p>
-              History
-            </p>
-          </a>
-        </li>
-        <!-- if login -->
-        <li class="nav-item">
-          <a href="#" class="nav-link"  data-toggle="modal" data-target="#modal-xl">
-            <i class="nav-icon fas fa-plus"></i>
-            <p>
-              Add Book
-            </p>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <!-- /.sidebar-menu -->
-  </div></div></div><div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable os-scrollbar-auto-hidden"><div class="os-scrollbar-track"><div class="os-scrollbar-handle" style="width: 100%; transform: translate(0px, 0px);"></div></div></div><div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hidden"><div class="os-scrollbar-track"><div class="os-scrollbar-handle" style="height: 49.8548%; transform: translate(0px, 0px);"></div></div></div><div class="os-scrollbar-corner"></div></div>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link active" id="index">
+                  <i class="nav-icon fas fa-book"></i>
+                  <p>
+                    Explore
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="history.html" class="nav-link" id="history">
+                  <i class="nav-icon fas fa-history"></i>
+                  <p>
+                    History
+                  </p>
+                </a>
+              </li>
+
+              <!-- if login -->
+              <li class="nav-item">
+                <a href="#" class="nav-link" data-toggle="modal" data-target="#modal-xl">
+                  <i class="nav-icon fas fa-plus"></i>
+                  <p>
+                    Add Book
+                  </p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="auth/index.html" class="nav-link" data-target="#modal-xl">
+                  <i class="nav-icon fas fa-sign-out-alt"></i>
+                  <p>
+                    Log Out
+                  </p>
+                </a>
+              </li>
+
+            </ul>
+          </nav>
+          <!-- /.sidebar-menu -->
+        </div>
+      </div>
+    </div>
+    <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable os-scrollbar-auto-hidden">
+      <div class="os-scrollbar-track">
+        <div class="os-scrollbar-handle" style="width: 100%; transform: translate(0px, 0px);"></div>
+      </div>
+    </div>
+    <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hidden">
+      <div class="os-scrollbar-track">
+        <div class="os-scrollbar-handle" style="height: 49.8548%; transform: translate(0px, 0px);"></div>
+      </div>
+    </div>
+    <div class="os-scrollbar-corner"></div>
+  </div>
   <!-- /.sidebar -->
 </aside>
