--- a/history.html
+++ b/history.html
@@ -354,8 +354,8 @@
                   </div>
                 </div>
                 <br>
-                <div class="card-tools custom-pagination-pos">
-                  <ul class="pagination pagination-sm">
+                <div class="card-tools">
+                  <ul class="pagination pagination-sm custom-pagination-pos">
                     <li class="page-item"><a href="#" class="page-link">&laquo;</a></li>
                     <li class="page-item"><a href="#" class="page-link">1</a></li>
                     <li class="page-item"><a href="#" class="page-link">2</a></li>
