--- a/history.html
+++ b/history.html
@@ -27,7 +27,8 @@
 
   <link rel="stylesheet" type="text/css" href="home/history.css">
   <link rel="stylesheet" type="text/css" href="home/sidebar.css">
-  <!-- Latest compiled and minified CSS 
+  <link rel="icon" href="./assets/favicons.ico">
+  <!-- Latest compiled and minified CSS
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 
@@ -284,7 +285,7 @@
                   </div>
                 </div>
 
-                
+
                 <div class="row">
                   <div class="col-md-1"><img src="assets/books/fantastic-beasts.jpg" class="media-object">
                   </div>
