--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- Flickity -->
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" type="text/css" href="extra_css.css">
+    <link rel="icon" href="./assets/favicons.ico">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
