--- a/detail.html
+++ b/detail.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="./assets/favicons.ico">
 
 </head>
 
