--- a/include_footer.html
+++ b/include_footer.html
@@ -1,8 +1,8 @@
 
         <footer class="main-footer text-sm">
             <div class="float-right d-none d-sm-block">
-                <b>Version</b> 3.0.5
-            </div>
-            <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
+                &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a> All rights
             reserved.
+            </div>
+            Made with  <i class="nav-icon fas fa-heart"></i> by <strong>Maxwell Library</strong>
         </footer>
